<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_enter_ingredient"
    tools:context=".EnterIngredient">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="83dp"
        android:layout_marginBottom="78dp"
        android:gravity="center"
        android:text="Please enter your ingredients one at \n a time in the fields below!"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/add_ingredientName_editText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/add_ingredientName_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="212dp"
        android:ems="10"
        android:hint="Ingredient"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/add_quantity_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="1dp"
        android:ems="10"
        android:hint="Quantity"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/add_ingredientName_editText"
        app:layout_constraintTop_toBottomOf="@+id/add_ingredientName_editText" />

    <Button
        android:id="@+id/add_ingredient_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="99dp"
        android:onClick="onClick"
        android:text="Add"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_quantity_editText" />

</androidx.constraintlayout.widget.ConstraintLayout>